--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-DATABASE_URL=postgres://root:root@127.0.0.1:5432/messenger
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+DATABASE_URL=mongodb://root:root@192.168.3.102:27017/messenger?authSource=admin
+ROCKET_ADDRESS=0.0.0.0
+ROCKET_PORT=8000
+ROCKET_SECRET_KEY=
