--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jalink"
-version = "0.2.0"
+version = "1.0.0"
 authors = ["LJason <ljason@ljason.cn>"]
 edition = "2018"
 readme = "README.md"
@@ -13,20 +13,32 @@ lto = "fat"
 panic = "abort"
 
 [dependencies]
+bson = "1.2"
 bytes = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 hyper = { version = "0.14", features = ["client"] }
 hyper-tls = "0.5"
-oauth2 = "3.0"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-diesel = { git = "https://github.com/diesel-rs/diesel", version = "2.0", features = ["postgres", "chrono", "r2d2"] }
-rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", features = ["secrets"] }
 jsonwebtoken = "7.2"
-chrono = { version = "0.4", features = ["serde"] }
+serde_json = "1.0"
+
+[dependencies.mongodb]
+version = "1.2"
+default-features = false
+features = ["async-std-runtime"]
+
+[dependencies.rocket]
+git = "https://github.com/SergioBenitez/Rocket"
+version = "0.5.0-dev"
+features = ["secrets"]
 
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket"
 version = "0.5.0-dev"
 default-features = false
-features = ["json", "diesel_postgres_pool"]
+features = ["json"]
+
+[dependencies.serde]
+version = "1.0"
+default-features = false
+features = ["derive"]
