--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb://root:root@192.168.3.102:27017/messenger?authSource=admin
+DATABASE_URL=
 ROCKET_ADDRESS=0.0.0.0
 ROCKET_PORT=8000
 ROCKET_SECRET_KEY=
